feat: 迁移 Cloud Run 至香港区域，使用 Supabase PostgreSQL
- 区域从 us-central1 迁移至 asia-east2（香港），降低中国用户延迟
- 添加 SQL_DSN 环境变量，使用外部 PostgreSQL 替代容器内 SQLite
- 添加 SESSION_SECRET 环境变量，防止容器重启后用户会话失效
- 新增 Artifact Registry 自动创建步骤，确保香港区域仓库存在

--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -9,9 +9,9 @@ on:
 
 env:
   PROJECT_ID: ascendant-altar-485914-k3
-  REGION: us-central1
+  REGION: asia-east2
   SERVICE: one-api
-  GAR_LOCATION: us-central1
+  GAR_LOCATION: asia-east2
 
 jobs:
   deploy:
@@ -37,6 +37,16 @@ jobs:
       - name: 'Configure Docker for Artifact Registry'
         run: gcloud auth configure-docker ${{ env.GAR_LOCATION }}-docker.pkg.dev --quiet
 
+      - name: 'Ensure Artifact Registry exists'
+        run: |
+          gcloud artifacts repositories describe cloud-run-source-deploy \
+            --location=${{ env.GAR_LOCATION }} \
+            --project=${{ env.PROJECT_ID }} 2>/dev/null || \
+          gcloud artifacts repositories create cloud-run-source-deploy \
+            --repository-format=docker \
+            --location=${{ env.GAR_LOCATION }} \
+            --project=${{ env.PROJECT_ID }}
+
       - name: 'Build Docker image'
         run: |
           docker build -t ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/cloud-run-source-deploy/${{ env.SERVICE }}:${{ github.sha }} .
@@ -53,4 +63,4 @@ jobs:
           service: '${{ env.SERVICE }}'
           region: '${{ env.REGION }}'
           image: '${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/cloud-run-source-deploy/${{ env.SERVICE }}:${{ github.sha }}'
-          flags: '--allow-unauthenticated --port=3000 --memory=1Gi --cpu=1 --min-instances=0 --max-instances=10 --service-account=azuro-app-runner@ascendant-altar-485914-k3.iam.gserviceaccount.com'
+          flags: '--allow-unauthenticated --port=3000 --memory=1Gi --cpu=1 --min-instances=0 --max-instances=10 --service-account=azuro-app-runner@ascendant-altar-485914-k3.iam.gserviceaccount.com --set-env-vars=SESSION_SECRET=${{ secrets.SESSION_SECRET }},SQL_DSN=${{ secrets.SQL_DSN }}'
